# streamline-desktop

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Makefile  NOTICE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
