[package]
name = "streamline-desktop"
version = "0.2.0"
edition = "2021"
description = "Streamline Desktop Application"
license = "Apache-2.0"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

